src/grammar/shlParser.java
// Generated from shl.g4 by ANTLR 4.2.1

package grammar;

import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class shlParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__49=1, T__48=2, T__47=3, T__46=4, T__45=5, T__44=6, T__43=7, T__42=8, 
		T__41=9, T__40=10, T__39=11, T__38=12, T__37=13, T__36=14, T__35=15, T__34=16, 
		T__33=17, T__32=18, T__31=19, T__30=20, T__29=21, T__28=22, T__27=23, 
		T__26=24, T__25=25, T__24=26, T__23=27, T__22=28, T__21=29, T__20=30, 
		T__19=31, T__18=32, T__17=33, T__16=34, T__15=35, T__14=36, T__13=37, 
		T__12=38, T__11=39, T__10=40, T__9=41, T__8=42, T__7=43, T__6=44, T__5=45, 
		T__4=46, T__3=47, T__2=48, T__1=49, T__0=50, TRUE=51, FALSE=52, DEC_NUMBER=53, 
		HEX_NUMBER=54, OCT_NUMBER=55, BIN_NUMBER=56, IDENTIFIER=57, STRING=58, 
		MULTI_COMMENT=59, LINE_COMMENT=60, WS=61;
	public static final String[] tokenNames = {
		"<INVALID>", "'*'", "'chr'", "'<'", "'main'", "'!='", "'cnt'", "'<='", 
		"'}'", "'%'", "'use'", "'*='", "')'", "'el'", "'='", "'str'", "'!'", "'<<='", 
		"'-='", "','", "'-'", "'**'", "'('", "':'", "'if'", "'int'", "'var'", 
		"'ret'", "'>>='", "'{'", "'+='", "'native'", "'vac'", "'boo'", "'fn'", 
		"'+'", "'for'", "'elif'", "';'", "'whl'", "'&&'", "'flt'", "'**='", "'||'", 
		"'>'", "'%='", "'/='", "'brk'", "'=='", "'/'", "'>='", "'T'", "'F'", "DEC_NUMBER", 
		"HEX_NUMBER", "OCT_NUMBER", "BIN_NUMBER", "IDENTIFIER", "STRING", "MULTI_COMMENT", 
		"LINE_COMMENT", "WS"
	};
	public static final int
		RULE_unary_expression = 0, RULE_multiplication_expression = 1, RULE_arithmetic_expr = 2, 
		RULE_cmp_expr = 3, RULE_log_negation = 4, RULE_log_and_expr = 5, RULE_binary_expression = 6, 
		RULE_non_empty_function_call_params = 7, RULE_function_call_params = 8, 
		RULE_function_call_expression = 9, RULE_string_const = 10, RULE_number = 11, 
		RULE_bool_const = 12, RULE_cast_expression = 13, RULE_primary_expression = 14, 
		RULE_assign_operator = 15, RULE_assignment_statement = 16, RULE_expression = 17, 
		RULE_identifier_list = 18, RULE_initialized_identifier = 19, RULE_initialized_identifier_list = 20, 
		RULE_declaration = 21, RULE_elif_statement = 22, RULE_opt_elif_statement_list = 23, 
		RULE_if_statement = 24, RULE_else_statement = 25, RULE_if_cond = 26, RULE_for_statement = 27, 
		RULE_for_init = 28, RULE_for_cond = 29, RULE_for_incr = 30, RULE_whl_statement = 31, 
		RULE_whl_cond = 32, RULE_ret_statement = 33, RULE_brk_statement = 34, 
		RULE_cnt_statement = 35, RULE_statement = 36, RULE_block_statement = 37, 
		RULE_type = 38, RULE_type_or_void = 39, RULE_statement_list = 40, RULE_statement_block = 41, 
		RULE_function_parameter_declaration = 42, RULE_function_parameter_list = 43, 
		RULE_opt_return_type = 44, RULE_function_declaration = 45, RULE_use_statement = 46, 
		RULE_function_declaration_list_or_use_statement = 47, RULE_start = 48;
	public static final String[] ruleNames = {
		"unary_expression", "multiplication_expression", "arithmetic_expr", "cmp_expr", 
		"log_negation", "log_and_expr", "binary_expression", "non_empty_function_call_params", 
		"function_call_params", "function_call_expression", "string_const", "number", 
		"bool_const", "cast_expression", "primary_expression", "assign_operator", 
		"assignment_statement", "expression", "identifier_list", "initialized_identifier", 
		"initialized_identifier_list", "declaration", "elif_statement", "opt_elif_statement_list", 
		"if_statement", "else_statement", "if_cond", "for_statement", "for_init", 
		"for_cond", "for_incr", "whl_statement", "whl_cond", "ret_statement", 
		"brk_statement", "cnt_statement", "statement", "block_statement", "type", 
		"type_or_void", "statement_list", "statement_block", "function_parameter_declaration", 
		"function_parameter_list", "opt_return_type", "function_declaration", 
		"use_statement", "function_declaration_list_or_use_statement", "start"
	};

	@Override
	public String getGrammarFileName() { return "shl.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public shlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Unary_expressionContext extends ParserRuleContext {
		public Cast_expressionContext cast_expression() {
			return getRuleContext(Cast_expressionContext.class,0);
		}
		public Unary_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unary_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof shlVisitor ) return ((shlVisitor<? extends T>)visitor).visitUnary_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Unary_expressionContext unary_expression() throws RecognitionException {
		Unary_expressionContext _localctx = new Unary_expressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_unary_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98); cast_expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Multiplication_expressionContext extends ParserRuleContext {
		public Multiplication_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiplication_expression; }
	 
		public Multiplication_expressionContext() { }
		public void copyFrom(Multiplication_expressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DivExprContext extends Multiplication_expressionContext {
		public Multiplication_expressionContext lhs;
		public Unary_expressionContext rhs;
		public Unary_expressionContext unary_expression() {
			return getRuleContext(Unary_expressionContext.class,0);
		}
		public Multiplication_expressionContext multiplication_expression() {
			return getRuleContext(Multiplication_expressionContext.class,0);
		}
		public DivExprContext(Multiplication_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof shlVisitor ) return ((shlVisitor<? extends T>)visitor).visitDivExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MulExprContext extends Multiplication_expressionContext {
		public Multiplication_expressionContext lhs;
		public Unary_expressionContext rhs;
		public Unary_expressionContext unary_expression() {
			return getRuleContext(Unary_expressionContext.class,0);
		}
		public Multiplication_expressionContext multiplication_expression() {
			return getRuleContext(Multiplication_expressionContext.class,0);
		}
		public MulExprContext(Multiplication_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof shlVisitor ) return ((shlVisitor<? extends T>)visitor).visitMulExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ModExprContext extends Multiplication_expressionContext {
		public Multiplication_expressionContext lhs;
		public Unary_expressionContext rhs;
		public Unary_expressionContext unary_expression() {
			return getRuleContext(Unary_expressionContext.class,0);
		}
		public Multiplication_expressionContext multiplication_expression() {
			return getRuleContext(Multiplication_expressionContext.class,0);
		}
		public ModExprContext(Multiplication_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof shlVisitor ) return ((shlVisitor<? extends T>)visitor).visitModExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PowExprContext extends Multiplication_expressionContext {
		public Multiplication_expressionContext lhs;
		public Unary_expressionContext rhs;
		public Unary_expressionContext unary_expression() {
			return getRuleContext(Unary_expressionContext.class,0);
		}
		public Multiplication_expressionContext multiplication_expression() {
			return getRuleContext(Multiplication_expressionContext.class,0);
		}
		public PowExprContext(Multiplication_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof shlVisitor ) return ((shlVisitor<? extends T>)visitor).visitPowExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MulFTContext extends Multiplication_expressionContext {
		public Unary_expressionContext unary_expression() {
			return getRuleContext(Unary_expressionContext.class,0);
		}
		public MulFTContext(Multiplication_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof shlVisitor ) return ((shlVisitor<? extends T>)visitor).visitMulFT(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Multiplication_expressionContext multiplication_expression() throws RecognitionException {
		return multiplication_expression(0);
	}

	private Multiplication_expressionContext multiplication_expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Multiplication_expressionContext _localctx = new Multiplication_expressionContext(_ctx, _parentState);
		Multiplication_expressionContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_multiplication_expression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new MulFTContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(101); unary_expression();
			}
			_ctx.stop = _input.LT(-1);
			setState(117);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(115);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						_localctx = new PowExprContext(new Multiplication_expressionContext(_parentctx, _parentState));
						((PowExprContext)_localctx).lhs = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_multiplication_expression);
						setState(103);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(104); match(21);
						setState(105); ((PowExprContext)_localctx).rhs = unary_expression();
						}
						break;

					case 2:
						{
						_localctx = new MulExprContext(new Multiplication_expressionContext(_parentctx, _parentState));
						((MulExprContext)_localctx).lhs = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_multiplication_expression);
						setState(106);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(107); match(1);
						setState(108); ((MulExprContext)_localctx).rhs = unary_expression();
						}
						break;

					case 3:
						{
						_localctx = new DivExprContext(new Multiplication_expressionContext(_parentctx, _parentState));
						((DivExprContext)_localctx).lhs = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_multiplication_expression);
						setState(109);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(110); match(49);
						setState(111); ((DivExprContext)_localctx).rhs = unary_expression();
						}
						break;

					case 4:
						{
						_localctx = new ModExprContext(new Multiplication_expressionContext(_parentctx, _parentState));
						((ModExprContext)_localctx).lhs = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_multiplication_expression);
						setState(112);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(113); match(9);
						setState(114); ((ModExprContext)_localctx).rhs = unary_expression();
						}
						break;
					}
					} 
				}
				setState(119);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Arithmetic_exprContext extends ParserRuleContext {
		public Arithmetic_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithmetic_expr; }
	 
		public Arithmetic_exprContext() { }
		public void copyFrom(Arithmetic_exprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MinusExprContext extends Arithmetic_exprContext {
		public Arithmetic_exprContext lhs;
		public Multiplication_expressionContext rhs;
		public Arithmetic_exprContext arithmetic_expr() {
			return getRuleContext(Arithmetic_exprContext.class,0);
		}
		public Multiplication_expressionContext multiplication_expression() {
			return getRuleContext(Multiplication_expressionContext.class,0);
		}
		public MinusExprContext(Arithmetic_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof shlVisitor ) return ((shlVisitor<? extends T>)visitor).visitMinusExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ArithFTContext extends Arithmetic_exprContext {
		public Multiplication_expressionContext multiplication_expression() {
			return getRuleContext(Multiplication_expressionContext.class,0);
		}
		public ArithFTContext(Arithmetic_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof shlVisitor ) return ((shlVisitor<? extends T>)visitor).visitArithFT(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PlusExprContext extends Arithmetic_exprContext {
		public Arithmetic_exprContext lhs;
		public Multiplication_expressionContext rhs;
		public Arithmetic_exprContext arithmetic_expr() {
			return getRuleContext(Arithmetic_exprContext.class,0);
		}
		public Multiplication_expressionContext multiplication_expression() {
			return getRuleContext(Multiplication_expressionContext.class,0);
		}
		public PlusExprContext(Arithmetic_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof shlVisitor ) return ((shlVisitor<? extends T>)visitor).visitPlusExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Arithmetic_exprContext arithmetic_expr() throws RecognitionException {
		return arithmetic_expr(0);
	}

	private Arithmetic_exprContext arithmetic_expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Arithmetic_exprContext _localctx = new Arithmetic_exprContext(_ctx, _parentState);
		Arithmetic_exprContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_arithmetic_expr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new ArithFTContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(121); multiplication_expression(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(131);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(129);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						_localctx = new PlusExprContext(new Arithmetic_exprContext(_parentctx, _parentState));
						((PlusExprContext)_localctx).lhs = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_arithmetic_expr);
						setState(123);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(124); match(35);
						setState(125); ((PlusExprContext)_localctx).rhs = multiplication_expression(0);
						}
						break;

					case 2:
						{
						_localctx = new MinusExprContext(new Arithmetic_exprContext(_parentctx, _parentState));
						((MinusExprContext)_localctx).lhs = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_arithmetic_expr);
						setState(126);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(127); match(20);
						setState(128); ((MinusExprContext)_localctx).rhs = multiplication_expression(0);
						}
						break;
					}
					} 
				}
				setState(133);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Cmp_exprContext extends ParserRuleContext {
		public Cmp_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmp_expr; }
	 
		public Cmp_exprContext() { }
		public void copyFrom(Cmp_exprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CmpLTExprContext extends Cmp_exprContext {
		public Cmp_exprContext lhs;
		public Arithmetic_exprContext rhs;
		public Arithmetic_exprContext arithmetic_expr() {
			return getRuleContext(Arithmetic_exprContext.class,0);
		}
		public Cmp_exprContext cmp_expr() {
			return getRuleContext(Cmp_exprContext.class,0);
		}
		public CmpLTExprContext(Cmp_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof shlVisitor ) return ((shlVisitor<? extends T>)visitor).visitCmpLTExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CmpNEExprContext extends Cmp_exprContext {
		public Cmp_exprContext lhs;
		public Arithmetic_exprContext rhs;
		public Arithmetic_exprContext arithmetic_expr() {
			return getRuleContext(Arithmetic_exprContext.class,0);
		}
		public Cmp_exprContext cmp_expr() {
			return getRuleContext(Cmp_exprContext.class,0);
		}
		public CmpNEExprContext(Cmp_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof shlVisitor ) return ((shlVisitor<? extends T>)visitor).visitCmpNEExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CmpEQExprContext extends Cmp_exprContext {
		public Cmp_exprContext lhs;
		public Arithmetic_exprContext rhs;
		public Arithmetic_exprContext arithmetic_expr() {
			return getRuleContext(Arithmetic_exprContext.class,0);
		}
		public Cmp_exprContext cmp_expr() {
			return getRuleContext(Cmp_exprContext.class,0);
		}
		public CmpEQExprContext(Cmp_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof shlVisitor ) return ((shlVisitor<? extends T>)visitor).visitCmpEQExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CmpFTContext extends Cmp_exprContext {
		public Arithmetic_exprContext arithmetic_expr() {
			return getRuleContext(Arithmetic_exprContext.class,0);
		}
		public CmpFTContext(Cmp_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof shlVisitor ) return ((shlVisitor<? extends T>)visitor).visitCmpFT(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CmpGTExprContext extends Cmp_exprContext {
		public Cmp_exprContext lhs;
		public Arithmetic_exprContext rhs;
		public Arithmetic_exprContext arithmetic_expr() {
			return getRuleContext(Arithmetic_exprContext.class,0);
		}
		public Cmp_exprContext cmp_expr() {
			return getRuleContext(Cmp_exprContext.class,0);
		}
		public CmpGTExprContext(Cmp_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof shlVisitor ) return ((shlVisitor<? extends T>)visitor).visitCmpGTExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CmpLEExprContext extends Cmp_exprContext {
		public Cmp_exprContext lhs;
		public Arithmetic_exprContext rhs;
		public Arithmetic_exprContext arithmetic_expr() {
			return getRuleContext(Arithmetic_exprContext.class,0);
		}
		public Cmp_exprContext cmp_expr() {
			return getRuleContext(Cmp_exprContext.class,0);
		}
		public CmpLEExprContext(Cmp_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof shlVisitor ) return ((shlVisitor<? extends T>)visitor).visitCmpLEExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CmpGEExprContext extends Cmp_exprContext {
		public Cmp_exprContext lhs;
		public Arithmetic_exprContext rhs;
		public Arithmetic_exprContext arithmetic_expr() {
			return getRuleContext(Arithmetic_exprContext.class,0);
		}
		public Cmp_exprContext cmp_expr() {
			return getRuleContext(Cmp_exprContext.class,0);
		}
		public CmpGEExprContext(Cmp_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof shlVisitor ) return ((shlVisitor<? extends T>)visitor).visitCmpGEExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Cmp_exprContext cmp_expr() throws RecognitionException {
		return cmp_expr(0);
	}

	private Cmp_exprContext cmp_expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Cmp_exprContext _localctx = new Cmp_exprContext(_ctx, _parentState);
		Cmp_exprContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_cmp_expr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new CmpFTContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(135); arithmetic_expr(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(157);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(155);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						_localctx = new CmpLTExprContext(new Cmp_exprContext(_parentctx, _parentState));
						((CmpLTExprContext)_localctx).lhs = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_cmp_expr);
						setState(137);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(138); match(3);
						setState(139); ((CmpLTExprContext)_localctx).rhs = arithmetic_expr(0);
						}
						break;

					case 2:
						{
						_localctx = new CmpLEExprContext(new Cmp_exprContext(_parentctx, _parentState));
						((CmpLEExprContext)_localctx).lhs = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_cmp_expr);
						setState(140);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(141); match(7);
						setState(142); ((CmpLEExprContext)_localctx).rhs = arithmetic_expr(0);
						}
						break;
